
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ pid_t ;
typedef int path ;
typedef int link ;


 int PATH_MAX ;
 int fprintf (int ,char*) ;
 int perror (char*) ;
 scalar_t__ readlink (char*,char*,int) ;
 int snprintf (char*,int,char*,int) ;
 int stderr ;
 int strcmp (char*,char*) ;

int check_execve(pid_t victim, char * filename)
{
 char path[PATH_MAX+1];
 char link[PATH_MAX+1];
 int res;

 snprintf(path, sizeof(path), "/proc/%i/exe", (int)victim);
 if (readlink(path, link, sizeof(link)-1)<0) {
  perror("readlink");
  return -1;
 }

 link[sizeof(link)-1]='\0';
 res=!strcmp(link, filename);
 if (res) fprintf(stderr, "Child slept outside of execve\n");
 return res;
}
